syntax = "proto3";

// package go.micro.srv.user;
option go_package = ".;user";

service User {
  // 用户注册
  rpc Signup(ReqSignup) returns (RespSignup) {}
  // 用户登录
  rpc Signin(ReqSignin) returns (RespSignin) {}
  // 获取用户信息
  rpc UserInfo(ReqUserInfo) returns (RespUserInfo) {}
  // test
  rpc QueryUserByName(Request) returns (Response) {}
}

message user {
  int64 id = 1;
  string name = 2;
  string pwd = 3;
  uint64 createdTime = 4;
  uint64 updatedTime = 5;
}

message Error {
  int32 code = 1;
  string detail = 2;
}

message Request {
  string userID = 1;
  string userName = 2;
  string userPwd = 3;
}

message Response {
  bool success = 1;
  Error error = 2;
  user user = 3;
}

message ReqSignup {
  string username = 1;
  string password = 2;
}

message RespSignup {
  int32 code = 1;
  string message = 2;
}

message ReqSignin {
  string username = 1;
  string password = 2;
}

message RespSignin {
  int32 code = 1;
  string token = 2;
  string message = 3;
}

message ReqUserInfo { string username = 1; }

message RespUserInfo {
  int32 code = 1;
  string message = 2;
  string username = 3;
  string email = 4;
  string phone = 5;
  string signupAt = 6;
  string lastActiveAt = 7;
  int32 status = 8;
}
